--- a/src/css/login.scss
+++ b/src/css/login.scss
@@ -1,6 +1,6 @@
 .inner {
   padding: 5vw;
-  padding-top: 10vh;
+  padding-top: 8vh;
   text-align: center;
   vertical-align: middle;
   display: flex;
@@ -13,14 +13,18 @@
   padding: 62px 0;
   border-radius: 0.5vw;
   overflow: hidden;
-  height: 70vh;
+  height: 60vh;
   box-shadow: 0 0 26px 0px rgba(19, 19, 19, 0.2);
   //   background: url(/assets/main/join_bg.jpg) bottom no-repeat;
   background-size: contain;
   box-sizing: border-box;
   min-height: 550px;
+  min-width: 355px;
 }
 
+input::placeholder {
+  color: #bebebe;
+}
 .login-text {
   margin: 2rem 0;
   font-size: 2rem;
@@ -61,14 +65,20 @@
   border-radius: 0.3vw;
   box-sizing: border-box;
   margin-bottom: 15px;
+  margin: 1rem 0 0 0;
 }
 
 .btn-section {
+  margin-top: 1rem;
   width: 100%;
   display: flex;
   justify-content: space-between;
   font-family: "galmuri9";
+
   //   font-size: rem;
+  @media (max-width: 400px) {
+    font-size: 13px;
+  }
 }
 .do-login {
   width: 48%;
@@ -77,6 +87,8 @@
   border: 1px solid rgb(234, 94, 118);
   border-radius: 3px;
   color: rgb(234, 94, 118);
+  background-color: white;
+
   &.active {
     width: 100%;
   }
@@ -95,7 +107,7 @@
   &.active2 {
     width: 100%;
   }
-  &.active1 {
+  &.active {
     display: none;
   }
 }
